--- a/space-editor/index.html
+++ b/space-editor/index.html
@@ -38,9 +38,9 @@
             flex-direction: column;
             align-items: center;
             justify-content: center;
-            gap: 1pc;
+            gap: .5pc;
             height: 100vh;
-            padding: 2pc;
+            padding: 1pc 2pc;
             background-color: #06011E;
             overflow: hidden;
         }
@@ -160,7 +160,7 @@
 
         @media only screen and (max-width: 400px){
             button {
-                font-size: 3.2vw;
+                font-size: 3.9vw;
             }
         }
 
