--- a/space-editor/index.html
+++ b/space-editor/index.html
@@ -39,7 +39,7 @@
             align-items: center;
             justify-content: center;
             gap: .5pc;
-            height: 100vh;
+            height: 100dvh;
             padding: 1pc 2pc;
             background-color: #06011E;
             overflow: hidden;
