--- a/space-editor/index.html
+++ b/space-editor/index.html
@@ -134,33 +134,33 @@
             cursor: pointer;
         }
 
-        @media only screen and (max-width: 900px){
+        @media only screen and (max-width: 900px) {
             button {
                 font-size: 2vw;
             }
         }
-        
-        @media only screen and (max-width: 700px){
+
+        @media only screen and (max-width: 700px) {
             button {
                 font-size: 2.3vw;
             }
         }
 
-        @media only screen and (max-width: 550px){
+        @media only screen and (max-width: 550px) {
             button {
                 font-size: 2.6vw;
             }
         }
 
-        @media only screen and (max-width: 500px){
+        @media only screen and (max-width: 500px) {
             button {
                 font-size: 2.9vw;
             }
         }
 
-        @media only screen and (max-width: 400px){
+        @media only screen and (max-width: 400px) {
             button {
-                font-size: 3.9vw;
+                font-size: 3.5vw;
             }
         }
 
@@ -181,21 +181,100 @@
             width: 65%;
             height: 70%;
             background-color: #121936;
-            border-radius: 2pc;
+            border-radius: 1pc;
             z-index: 3;
             cursor: pointer;
             overflow-y: auto;
             opacity: 0;
             visibility: hidden;
-            border: 3px solid rgba(255, 255, 255, 0.2);
+            border: 3px solid rgba(255, 255, 255, 0.3);
             transition: .4s ease;
             padding: 1pc;
+        }
+
+        .output .content {
+            position: relative;
+            width: 100%;
+            height: 100%;
+        }
+
+        @media only screen and (max-width: 900px) {
+            .output {
+                width: 80%;
+                height: 75%;
+            }
+        }
+
+        @media only screen and (max-width: 600px) {
+            .output {
+                width: 90%;
+                height: 80%;
+            }
         }
 
         .output.active {
             opacity: 1;
             visibility: visible;
             transform: translate(-50%, -50%);
+        }
+
+        .output .content .translate {
+            position: absolute;
+            top: 100%;
+            left: 0%;
+            transform: translate(0, -100%);
+            width: 17vh;
+            height: 6vh;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            background-color: #5a23ff;
+            border-radius: .5pc;
+            transition: .2s ease;
+        }
+
+        .output .content .translate:hover {
+            background-color: #7042fd;
+        }
+
+        .output .content .translate:active {
+            transition: .1s ease;
+            background-color: #5d27ff;
+        }
+
+        .output .content .translate p {
+            font-weight: bolder;
+            font-size: 1.2vw;
+        }
+
+        @media only screen and (max-width: 800px) {
+            .output .content .translate p {
+                font-size: 1.7vw;
+            }
+        }
+
+        @media only screen and (max-width: 600px) {
+            .output .content .translate p {
+                font-size: 2vw;
+            }
+        }
+
+        @media only screen and (max-width: 500px) {
+            .output .content .translate p {
+                font-size: 2.3vw;
+            }
+        }
+
+        @media only screen and (max-width: 450px) {
+            .output .content .translate p {
+                font-size: 2.7vw;
+            }
+        }
+
+        @media only screen and (max-width: 400px) {
+            .output .content .translate p {
+                font-size: 3.3vw;
+            }
         }
 
         .effect {
@@ -221,14 +300,19 @@
 </head>
 
 <body>
-    <div class="effect"></div>
+    <div class="effect active"></div>
     <div class="input">
         <div class="textarea" contenteditable="true"></div>
     </div>
     <button id="edit">Düzenle</button>
 
-    <div class="output">
-        <p></p>
+    <div class="output active">
+        <div class="content">
+            <p></p>
+            <div class="translate" type="translate">
+                <p type="translate">Çevir</p>
+            </div>
+        </div>
     </div>
 </body>
 
@@ -254,37 +338,49 @@
         var editedText = ""
 
         for (var x = 0; x < text.split(" ").length; x++) {
-            if(text.split(" ")[x].replace(/\s/, "") != "") {
+            if (text.split(" ")[x].replace(/\s/, "") != "") {
                 editedText += text.split(" ")[x].trim() + " "
             }
         }
 
-        output.children[0].textContent = editedText
+        output.children[0].children[0].textContent = editedText
 
         effect.classList.add('active')
         output.classList.add('active')
     })
 
-    output.addEventListener('click', () => {
-        navigator.clipboard.writeText(output.children[0].textContent)
+    output.addEventListener('click', e => {
+        navigator.clipboard.writeText(output.children[0].children[0].textContent)
 
-        output.style.cssText = 'border-color: #70ff75'
-        setTimeout(() => {
-            output.style.cssText = 'border-color: #ffffff33'
-
+        if (e.target.getAttribute('type') != undefined && e.target.getAttribute('type') == "translate") {
+            window.open(`https://www.deepl.com/tr/translator#en/tr/${output.children[0].children[0].textContent}`)
+            
+            output.style.cssText = 'border-color: #70ff75'
             setTimeout(() => {
-                effect.classList.remove('active')
-                output.classList.remove('active')
-
-                input.children[0].textContent = ""
+                output.style.cssText = 'border-color: #ffffff33'
             }, 500)
-        }, 500)
+        }
+        else {
+            output.style.cssText = 'border-color: #70ff75'
+            setTimeout(() => {
+                output.style.cssText = 'border-color: #ffffff33'
+
+                setTimeout(() => {
+                    effect.classList.remove('active')
+                    effect.getAttribute
+                    output.classList.remove('active')
+
+                    input.children[0].textContent = ""
+                }, 500)
+            }, 500)
+        }
     })
 
     effect.addEventListener('click', () => {
         effect.classList.remove('active')
         output.classList.remove('active')
     })
+
 </script>
 
 </html>
