--- a/space-editor/index.html
+++ b/space-editor/index.html
@@ -300,13 +300,13 @@
 </head>
 
 <body>
-    <div class="effect active"></div>
+    <div class="effect"></div>
     <div class="input">
         <div class="textarea" contenteditable="true"></div>
     </div>
     <button id="edit">Düzenle</button>
 
-    <div class="output active">
+    <div class="output">
         <div class="content">
             <p></p>
             <div class="translate" type="translate">
